# PracticalWork

./: CMakeLists.txt  README.md  about-project.md  antenna.c  antenna.h  antenna_effect.c  antenna_effect.h  main.c
docs/: about-docs.md  configfile  configfile.txt
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c.js  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  _target_directories_8txt.html  a1_8txt.html  a2_8txt.html  a3_8txt.html  about-docs_8md.html  about-header-files_8md.html  about-inputs_8md.html  about-outputs_8md.html  about-project_8md.html  about-source-codes_8md.html  annotated.html  annotated_dup.js  antenna_8c.html  antenna_8c.js  antenna_8h.html  antenna_8h.js  antenna_8h_source.html  antenna__effect_8c.html  antenna__effect_8c.js  antenna__effect_8h.html  antenna__effect_8h.js  antenna__effect_8h_source.html  antenna__map__1_8txt.html  antenna__map__2_8txt.html  antenna__map__3_8txt.html  antennas__output_8txt.html  b1_8txt.html  b2_8txt.html  classes.html  clion-_debug-event-trace-log_8txt.html  (+132 more)
include/: about-header-files.md  antenna.h  antenna_effect.h  graph.h  io_ops.h  lang.h  menu.h  strings.h  ui.h
input/: about-inputs.md  antenna_map_1.txt  antenna_map_2.txt  antenna_map_3.txt  map_4.txt
lang/: messages_pt.json  messages_tr.json
output/: about-outputs.md  t1.txt  t3.txt  t4.txt  x1.txt  x2.txt  y.txt  z1.txt  z2.txt  z3.txt
src/: about-source-codes.md  antenna.c  antenna.h  antenna_effect.c  antenna_effect.h  graph.c  io_ops.c  io_ops.h  lang.c  main.c  menu.c  ui.c
(+185 files in other folders)
